--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "homepage": "https://tolyakryv.github.io/goit-js-hw-10",
   "scripts": {
+    "gpom":"git push origin main",
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-10/"
   },
