--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "homepage": "https://tolyakryv.github.io/goit-js-hw-10",
   "scripts": {
-    "gpush":"git push origin main",
+    "gpush": "git push origin main",
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-10/"
   },
@@ -27,6 +27,7 @@
     "sass": "^1.32.8"
   },
   "dependencies": {
-    "lodash.debounce": "^4.0.8"
+    "lodash.debounce": "^4.0.8",
+    "notiflix": "^3.2.5"
   }
 }
