--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "sass": "^1.32.8"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "lodash.debounce": "^4.0.8",
-    "notiflix": "^3.2.5"
+    "notiflix": "^3.2.5",
+    "simplelightbox": "^2.10.3"
   }
 }
